[package]
name = "leveldb-orm-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["extra-traits", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
bincode = "1.3"
leveldb-orm-trait = { path = "../leveldb-orm-trait" }
leveldb = "0.8"

[dev-dependencies]
serde   = { version = "1.0", features = ["derive"] }
tempdir = "0.3"
