[package]
name = "leveldb-orm-derive"
version = "0.1.5"
authors = [ "Bo zhang <dlhxzb@163.com>" ]

description = "An ORM for leveldb"

license = "MIT"
readme = "README.md"

documentation = "https://docs.rs/leveldb-orm-derive"
homepage = "https://github.com/dlhxzb/leveldb-orm"
repository = "https://github.com/dlhxzb/leveldb-orm"

edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0", features = ["extra-traits", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
leveldb = "0.8"
leveldb-orm = { version = "0.1.0", path = "../leveldb-orm", features = ["macros"] }
serde   = { version = "1.0", features = ["derive"] }
tempdir = "0.3"
