[package]
name = "leveldb-orm"
version = "0.1.2"
authors = [ "Bo zhang <dlhxzb@163.com>" ]

description = "An ORM for leveldb"

license = "MIT"
readme = "README.md"

documentation = "https://docs.rs/leveldb-orm"
homepage = "https://github.com/dlhxzb/leveldb-orm"
repository = "https://github.com/dlhxzb/leveldb-orm"

edition = "2021"

[features]
# Include nothing by default
default = []

macros = ["leveldb-orm-derive"]

[dependencies]
leveldb-orm-derive = { version = "0.1", path = "../leveldb-orm-derive", optional = true }
bincode = "1.3"
db-key = "0.0.5" # leveldb support 0.0.5
leveldb = "0.8"
serde   = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempdir = "0.3"